--- a/demo/src/main/resources/static/css/styles.css
+++ b/demo/src/main/resources/static/css/styles.css
@@ -18,6 +18,19 @@ h3 {
     "Helvetica Neue", Arial, sans-serif;
 }
 
+/* Reveal Animation */
+
+.hidden {
+  opacity: 0;
+  transform: translateY(50px);
+  transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+}
+
+.reveal {
+  opacity: 1;
+  transform: translateY(0);
+}
+
 /* Announcement Banner */
 .announcement-banner {
   background: #8b5cf6;
@@ -264,7 +277,7 @@ h3 {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  opacity: 0.5; /* Adjust opacity as needed */
+  opacity: 0.5;
 }
 
 .hero-content {
@@ -313,13 +326,29 @@ h3 {
 .btn.primary {
   background: white;
   color: #1f2937;
+  padding: 0.75rem 2rem;
+  border-radius: 0.5rem;
+  font-weight: 600;
+  cursor: pointer;
+  font-size: large;
+  transition: all 0.3s ease;
+  border: none;
+  text-decoration: none;
 }
 
 .btn.secondary {
   background: transparent;
   border: 1px solid white;
   color: white;
+  text-decoration: none;
+  border-radius: 0.5rem;
+  font-weight: 600;
+  cursor: pointer;
+  font-size: large;
+  transition: all 0.3s ease;
+  text-decoration: none;
 }
+
 .floating-card {
   position: absolute;
   right: 2rem;
@@ -821,9 +850,9 @@ h3 {
 }
 
 .blog-grid {
-  max-width: 1280px;
+  max-width: 1300px;
   margin: 0 auto;
-  padding: 0 2rem;
+  padding: 2rem;
   display: flex;
   grid-template-columns: repeat(3, 1fr);
   gap: 2rem;
@@ -837,8 +866,8 @@ h3 {
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease;
   position: relative;
-  flex: 1 0 30%; /* Adjust width to fit three cards */
-  margin: 0 1%; /* Add some margin between cards */
+  flex: 1 0 30%;
+  margin: 0 1%;
   box-sizing: border-box;
 }
 
@@ -901,6 +930,7 @@ h3 {
   border-radius: 9999px;
   font-size: 0.875rem;
 }
+
 /* CTA Section */
 .cta {
   position: relative;
@@ -945,7 +975,6 @@ h3 {
 
 .cta-subtitle {
   display: flex;
-  align-items: center;
   gap: 1rem;
   margin-bottom: 2rem;
 }
@@ -1089,6 +1118,11 @@ footer {
 .footer-logo .logo-icon {
   width: 2rem;
   height: 2rem;
+}
+
+.footer-column span {
+  font-weight: 600;
+  font-size: 1.5rem;
 }
 
 .footer-column p {
