--- a/demo/src/main/resources/templates/index.html
+++ b/demo/src/main/resources/templates/index.html
@@ -24,9 +24,9 @@
 
         <div class="nav-center">
           <a href="#" class="nav-link active">Inicio</a>
-          <a href="/specialties" class="nav-link">Servicios</a>
-          <a href="#" class="nav-link">Nosotros</a>
-          <a href="#" class="nav-link">Contacto</a>
+          <a href="/specialties" class="nav-link">Especialidades</a>
+          <a href="#" class="nav-link">Blog</a>
+          <a href="#cta" class="nav-link">Contacto</a>
         </div>
 
         <div class="nav-right">
@@ -71,8 +71,8 @@
           </p>
 
           <div class="hero-buttons">
-            <button class="btn primary">Contáctanos</button>
-            <button class="btn secondary">Descubre más</button>
+            <a href="#cta" class="btn primary">Contáctanos</a>
+            <a href="/login" class="btn secondary">Ingresa al portal</a>
           </div>
         </article>
 
@@ -113,8 +113,8 @@
     </section>
 
     <section class="features">
-      <div class="features-container">
-        <header class="features-header">
+      <div class="features-container scroll-reveal">
+        <header class="features-header scroll-reveal">
           <img
             src="https://raw.githubusercontent.com/lucide-icons/lucide/main/icons/sparkles.svg"
             alt="Sparkles"
@@ -123,7 +123,7 @@
         </header>
 
         <div class="feature-cards">
-          <article class="feature-card">
+          <article class="feature-card scroll-reveal">
             <img
               src="/assets/images/team-building.png"
               alt="Check"
@@ -132,7 +132,7 @@
             <p>Dolore excepteur adipisicing incididunt incididunt magna</p>
           </article>
 
-          <article class="feature-card">
+          <article class="feature-card scroll-reveal">
             <img
               src="/assets/images/quality.png"
               alt="Gift"
@@ -141,7 +141,7 @@
             <p>Incididunt occaecat est anim minim in mollit laborum</p>
           </article>
 
-          <article class="feature-card">
+          <article class="feature-card scroll-reveal">
             <img
               src="/assets/images/siren.png"
               alt="Globe"
@@ -153,7 +153,7 @@
           </article>
         </div>
 
-        <div class="stats">
+        <div class="stats scroll-reveal">
           <div class="stat-item">
             <div class="stat-number">4</div>
             <div class="stat-label">Años</div>
@@ -174,11 +174,11 @@
       </div>
     </section>
 
-    <section id="specialties" class="specialties">
+    <section id="specialties" class="specialties scroll-reveal">
       <h2>Especialidades</h2>
 
-      <div class="specialties-grid">
-        <article class="specialty-card violet">
+      <div class="specialties-grid scroll-reveal">
+        <article class="specialty-card violet scroll-reveal">
           <h3>Odontología</h3>
           <p>
             Cuida la salud dental de tu mascota! Trata enfermedades
@@ -187,7 +187,7 @@
           <a href="/specialties" class="read-more">Leer más</a>
         </article>
 
-        <article class="specialty-card orange">
+        <article class="specialty-card orange scroll-reveal">
           <div class="specialty-content">
             <h3>Nutrición y Dietética</h3>
             <p>
@@ -201,7 +201,7 @@
             alt="Nutrición" />
         </article>
 
-        <article class="specialty-card rose">
+        <article class="specialty-card rose scroll-reveal">
           <div class="specialty-content">
             <h3>Fisioterapia</h3>
             <p>
@@ -216,7 +216,7 @@
             alt="Fisioterapia" />
         </article>
 
-        <article class="specialty-card blue">
+        <article class="specialty-card blue scroll-reveal">
           <h3>Ver Todas</h3>
           <p>
             ¡Ofrecemos 12 especialidades para tratar a tu mascota! Conócelas
@@ -228,17 +228,17 @@
     </section>
 
     <!-- Testimonials Section -->
-    <section id="testimonials" class="testimonials">
+    <section id="testimonials" class="testimonials scroll-reveal">
       <h2>Algunos Testimonios</h2>
 
-      <div class="testimonial-carousel">
+      <div class="testimonial-carousel scroll-reveal">
         <button class="carousel-arrow prev">
           <img
             src="https://raw.githubusercontent.com/lucide-icons/lucide/main/icons/chevron-left.svg"
             alt="Previous" />
         </button>
 
-        <article class="testimonial-card">
+        <article class="testimonial-card scroll-reveal">
           <figure class="testimonial-image-container">
             <div class="image-background"></div>
             <img
@@ -269,7 +269,7 @@
                 alt="Star"
                 class="star" />
             </div>
-            <p class="testimonial-text">
+            <p class="testimonial-text scroll-reveal">
               "Son muy buenos, gracias por la ayuda, logramos resolver la
               urgencia de nuestro pequeño, y todo salió bien finalmente. También
               tienen una página web increíble, super fácil de usar y muy linda
@@ -295,7 +295,7 @@
     </section>
 
     <!-- Blog Section -->
-    <section class="blog">
+    <section class="blog scroll-reveal">
       <div class="blog-header">
         <div>
           <h2>Blog</h2>
@@ -319,7 +319,7 @@
       </div>
 
       <div class="blog-grid">
-        <article class="blog-card">
+        <article class="blog-card scroll-reveal">
           <img
             src="https://images.unsplash.com/photo-1548403119-4f9f60f7c064?q=80&w=2942&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
             alt="El Reto de Viajar con Gatos" />
@@ -337,7 +337,7 @@
           </div>
         </article>
 
-        <article class="blog-card">
+        <article class="blog-card scroll-reveal">
           <img
             src="https://images.unsplash.com/photo-1450778869180-41d0601e046e?w=500"
             alt="Perros vs Gatos" />
@@ -352,7 +352,7 @@
           </div>
         </article>
 
-        <article class="blog-card">
+        <article class="blog-card scroll-reveal">
           <img
             src="https://images.unsplash.com/photo-1587300003388-59208cc962cb?w=500"
             alt="Ladridos y Salud" />
@@ -369,7 +369,7 @@
           </div>
         </article>
 
-        <article class="blog-card">
+        <article class="blog-card scroll-reveal">
           <img
             src="https://plus.unsplash.com/premium_photo-1738781517833-e24e4a6561f7?q=80&w=2940&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
             alt="Tips de viaje" />
@@ -390,9 +390,9 @@
     </section>
 
     <!-- CTA Section -->
-    <section id="cta" class="cta">
-      <div class="cta-content">
-        <div class="cta-text">
+    <section id="cta" class="cta scroll-reveal">
+      <div class="cta-content scroll-reveal">
+        <div class="cta-text scroll-reveal">
           <h2>
             Recibe información útil y de calidad sobre el cuidado de tu mascota.
           </h2>
@@ -403,7 +403,7 @@
           </div>
         </div>
         <form
-          class="contact-form"
+          class="contact-form scroll-reveal"
           id="contactForm"
           onsubmit="handleSubmit(event)">
           <div class="form-group">
@@ -434,38 +434,41 @@
 
     <!-- Footer -->
     <footer>
-      <div class="footer-content">
-        <div class="footer-grid">
-          <section class="footer-column">
+      <div class="footer-content scroll-reveal">
+        <div class="footer-grid scroll-reveal">
+          <section class="footer-column scroll-reveal">
             <div class="footer-logo">
               <img
                 src="/assets/images/logo_shiba.png"
                 alt="Logo"
                 class="logo-icon" />
-              <span>Clínica Shiba</span>
+              <span> Clínica Shiba</span>
             </div>
             <p>(601) 123456</p>
-            <p>2025 Pontificia Universidad Javeriana</p>
+            <p>
+              2025, Pontificia Universidad <br />
+              Javeriana
+            </p>
           </section>
 
-          <section class="footer-column">
+          <section class="footer-column scroll-reveal">
             <h3>Servicios</h3>
             <ul>
-              <li><a href="#specialties">Especialidades</a></li>
-              <li><a href="#hero">Urgencias</a></li>
-              <li><a href="#hero">Veterinarios</a></li>
+              <li><a href="/specialties">Especialidades</a></li>
+              <li><a href="/mascota/edit">Portal Veterinario</a></li>
+              <li><a href="/cliente/all">Portal Administrador</a></li>
             </ul>
           </section>
 
-          <section class="footer-column">
+          <section class="footer-column scroll-reveal">
             <h3>Sobre Nosotros</h3>
             <ul>
               <li><a href="#testimonials">Reseñas</a></li>
-              <li><a href="#blog">Blog</a></li>
+              <li><a href="/blog">Blog</a></li>
             </ul>
           </section>
 
-          <section class="footer-column">
+          <section class="footer-column scroll-reveal">
             <button class="help-button">Centro de Ayuda</button>
             <div class="social-icons">
               <a href="https://x.com" class="social-icon" target="_blank">
@@ -501,7 +504,7 @@
           </section>
         </div>
 
-        <div class="footer-bottom">
+        <div class="footer-bottom scroll-reveal">
           <p>© 2025, Clínica Shiba</p>
         </div>
       </div>
